EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==06/16/2010==
gaeorn: fixed possible bug with unlocking cursed containers in LDoN
Trevius: SoF/SoD/Live - Corrected the item structures to allow summonedflag setting to show on items.
Trevius: SoD/Live - Identified Clairvoyance and added it to load from the DB to be shown on items.

==06/15/2010==
Secrets: Characters with HPs higher than 30k will no longer be set back to 30k current health when zoning.
gaeorn: fixed integer transformation for RNG as it previously would only return the high value of the low to high range if the RNG returned exactly 0xffffffff
Trevius: The following item fields now load from the database: EliteMaterial LDoNSellBackRate ScriptFileID ExpendableArrow QuestItemFlag.
Trevius: Identified some unknown fields in the database from 13th floor findings, and removed multiple unused fields.
Trevius: The summonedflag field is copied from UNK109 field.

REQUIRED SQL:
utils/sql/svn/1542_items_table_cleanup.sql

==06/10/2010==
gaeorn: modified method of transforming RNG output into a range of integers. this should improve the equalization of the distribution of the returned random numbers

==06/09/2010==
Trevius: Added new Perl Mob quest object SpellEffect(effect, [duration, finish_delay, zone_wide, unk20, unk26]) for sending a spell paticle effects without casting a spell.
gaeorn: replaced random number generator with the first one on this page: http://www3.ocn.ne.jp/~harase/megenerators.html

==06/08/2010==
Trevius: Added new quest::resettaskactivity(task, activity) command for resetting a task activity done count to 0.

==06/07/2010==
gaeorn: compile fixes for linux
KLS: Added EVENT_SPELL_EFFECT_TRANSLOCATE_COMPLETE, EVENT_SPELL_EFFECT_BUFF_TIC_CLIENT, EVENT_SPELL_EFFECT_BUFF_TIC_NPC in the similar style of the other spell effect events.

==06/06/2010==